--- a/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
+++ b/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
@@ -1,1 +1,1 @@
-<p>todo-input-add-itens works!</p>
+<input type="text" placeholder="Difite sua nova Task aqui..." [(ngModel)]="addItemTaskList" (keyup.enter)="submitItemTaskList()">
