--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./dist/scss/variables";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: roboto;
+  font-weight: 400;
+}
+
+body {
+  background: $primary-background-color;
+
+}
+
+ul {
+  list-style: none;
+}
+
+textarea:focus, input:focus, button {
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+//Classes
+.conteiner {
+  width: 350px;
+  margin: 50px auto;
+}
